--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                     <div class="alert alert-danger" id="mobile-alert">Enter a valid mobile number</div>
                     <div class="form-group">
                         <select class="form-control" name="level">
-                            <option value="" disabled selecte>Choose level of education</option>
-                            <option value="1">Bachelor</option>
-                            <option value="2">Masters</option>
-                            <option value="3">Doctorate</option>
+                            <option value="" disabled selected>Choose level of education</option>
+                            <option value="Bachelor">Bachelor</option>
+                            <option value="Masters">Masters</option>
+                            <option value="Doctorate">Doctorate</option>
                         </select>
                         <div class="alert alert-danger" id="level-alert">Select atleast one test</div>
                     </div>
